[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hog_data_tool"
version = "0.0.0"
description = ""
authors = ["Louie Hext"]
readme = "README.md"
packages = [
  { include = "hog_data_tool", from = "src" },
  ]

[tool.poetry.dependencies]
python = "~3.12"
pydantic = "^2.10.7"
pydantic-settings = "^2.2.1"
pandas = "^2.2.3"
numpy = "^1.26.4"
loguru = "^0.7.3"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.2.1"
pyright = "^1.1.354"
codespell = "^2.3.0"
pytest = "^7.2.1"
pandas-stubs = "^2.2.1.240316"

[tool.ruff.lint]
ignore = ["E501", "E203", "COM812"]
select = ["E", "F", "I"]
exclude = [
  ".git",
  "__pycache__",
  "dist",
  "*.egg_info",
  "dist/",
  ".venv/",
  "*_pb2*"
]

# --- Black configuration ---
[tool.black]
line-length = 100
target-version = ["py312"]

# --- Codespell configuration ---
[tool.codespell]
count = true
skip = "poetry.lock,poetry.toml,pyproject.toml,.venv"
